--- a/style.css
+++ b/style.css
@@ -4,102 +4,152 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", serif;
-  /* font-weight: 500; */
-  font-style: normal;
 }
+
 html,
 body {
   height: 100%;
   width: 100%;
-}
-#weather-container {
-  margin-top: 50px;
-  padding: 20px;
-  height: 550px;
-  width: 400px;
-  background: linear-gradient(
-    to top,
-    rgba(8, 8, 8, 0.15),
-    rgba(250, 255, 255, 0.075)
-  );
-  backdrop-filter: blur(100px);
-  border: none;
-  border-radius: 12px;
-}
-body {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: url(https://cdn.pixabay.com/photo/2018/11/17/17/10/mountains-3821487_960_720.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: blur(10px);
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #fff;
 }
 
-#search-info {
-  border: solid #fff;
-  padding: 20px;
+body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
 }
-#input {
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(https://images.pexels.com/photos/66284/winter-nature-season-trees-66284.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: blur(8px);
+  z-index: -1;
+}
+
+#weather-container {
+  /* background-color: rgb(141, 167, 167); */
+  /* height: 520px; */
+  width: 400px;
+  padding: 20px;
+  border-radius: 20px;
+  background: linear-gradient(to right, rgb(149, 146, 146), rgb(209, 209, 207));
+  background: linear-gradient(
+    to bottom,
+    rgb(149, 146, 146),
+    rgb(209, 209, 207)
+  );
+}
+
+h1 {
+  /* border: 2px solid #fff; */
   padding: 10px;
-  width: 100%;
-  border: none;
-  border-radius: 90px;
-  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #search {
+  /* border: 2px solid #ffff; */
+  margin-top: 20px;
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#search-box {
+  padding: 10px;
+  border-radius: 8px;
   border: none;
-  border-radius: 5px;
   outline: none;
-  font-weight: 500;
+}
+
+#search-btn {
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  margin-left: 8px;
+  font-weight: 600;
   cursor: pointer;
 }
 
-#location {
-  border: solid #fff;
-  padding: 20px;
+#city-info {
+  /* border: 2px solid #ffff; */
   margin-top: 20px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* gap: 110px; */
+}
+#location {
+  /* border: 2px solid #ffff; */
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+#date {
+  /* border: 2px solid #ffff; */
+  padding: 5px;
+  margin-left: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#weather-info {
+  /* border: 2px solid #ffff; */
+  margin-top: 20px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#weather-conditon {
+  /* border: 2px solid #fff; */
+  margin-top: 20px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 100px;
+}
+#temp {
+  /* border: 2px solid #fff; */
   font-weight: 700;
+  font-size: 30px;
+}
+#humid {
+  /* border: 2px solid #fff; */
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
-  color: #fff;
+  font-weight: 700;
+  color: rgb(65, 61, 61);
 }
-
-#city-loc {
+#windspeed {
+  /* border: 2px solid #fff; */
+  padding: 8px;
   display: flex;
   align-items: center;
-  gap: 5px;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: rgb(65, 61, 61);
 }
-#date {
-  padding-right: 10px;
-  display: flex;
-  font-weight: 400;
-  white-space: nowrap;
-  overflow: visible;
-}
-#weather-info {
-  border: solid #fff;
-  margin-top: 20px;
-  padding: 50px;
-}
-#forcast-info {
-  border: solid #fff;
-  margin-top: 20px;
-  padding: 50px;
-}
-/* #weather-condition img {
-  size: 20px;
-} */
